[dependencies]
anyhow = "1.0.75"
async-openai = "0.17.1"
async-trait = "0.1.74"
clap = { features = ["cargo", "derive", "env"], version = "4.4.8" }
clap-markdown = "0.1.3"
clap_complete = "4.4.4"
colored = "2.0.4"
inquire = "0.6.2"
regex = "1.10.2"
tokio = { features = ["full"], version = "1.34.0" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[package]
authors = ["liblaf <i@liblaf.me>"]
description = "A CLI that writes your git commit messages for you with AI"
edition = "2021"
license = "MIT"
name = "ai-commit-cli"
readme = "README.md"
repository = "https://github.com/liblaf/ai-commit-cli"
version = "0.2.0"
