[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["liblaf <i@liblaf.me>"]
description = "A CLI that writes your git commit messages for you with AI"
name = "ai-commit-cli"
readme = "README.md"
version = "0.7.0"

[tool.poetry.dependencies]
httpx = { extras = ["socks"], version = ">=0.26,<0.28" }
loguru = "^0.7.2"
openai = "^1.11.0"
python = "^3.10"
questionary = "^2.0.1"
rich = "^13.7.0"
tiktoken = ">=0.5.2,<0.7.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
nuitka = "^2.0.1"
pyinstaller = { python = ">=3.10,<3.13", version = "^6.3.0" }

[tool.poetry.scripts]
aic = "ai_commit_cli.app:app"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
