[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = [
  "babel>=2.14.0",
  "httpx[socks]>=0.27.0",
  "loguru>=0.7.2",
  "openai>=1.14.0",
  "questionary>=2.0.1",
  "rich>=13.7.1",
  "tiktoken>=0.6.0",
  "typer[all]>=0.9.0",
]
description = "A CLI that writes your git commit messages for you with AI"
license = { text = "MIT" }
name = "ai-commit-cli"
readme = "README.md"
requires-python = ">= 3.10"
version = "0.7.0"

[tool.hatch.build.targets.wheel]
packages = ["src/aic"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
dev-dependencies = ["icecream>=2.1.3"]
managed = true

[tool.rye.scripts]
"aic" = { call = "aic.cli.main:app" }
