[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = [
  "babel>=2.14.0",
  "httpx[socks]>=0.27.0",
  "loguru>=0.7.2",
  "openai>=1.23.6",
  "pydantic>=2.7.1",
  "questionary>=2.0.1",
  "rich>=13.7.1",
  "tiktoken>=0.6.0",
  "typer>=0.12.3",
]
description = "Add your description here"
license = { text = "MIT" }
name = "ai-commit-cli"
readme = "README.md"
requires-python = ">= 3.11"
version = "0.8.2"

[project.scripts]
"aic" = "aic.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aic"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
reportMissingTypeStubs = "none"
typeCheckingMode = "strict"

[tool.rye]
dev-dependencies = ["icecream>=2.1.3"]
managed = true
